--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -44,6 +44,7 @@
       rel="stylesheet"
       href="../node_modules/@fortawesome/fontawesome-free/css/all.min.css"
     />
+    <base href="/" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
